# interrupt-lrm

./: .gitignore  README.md  pyproject.toml
data/augmentation/: code_intervene_stage1.py  code_intervene_stage2.py  code_intervene_stage3.py  math_intervene.py  prompts.py  utils.py
data/loading/: load_data_code.py  load_data_math.py
eval/code/: compute_code_generation_metrics.py  run_code_tests.py  testing_util.py
eval/math/: run_math_tests.py  utils.py
scripts/: common_config.sh  run_full_thinking.sh  run_interrupt.sh
src/: inference_utils.py  parser_utils.py  prompt_utils.py  run.py
src/prompts/interrupt/: extreme.json  hard.json  soft.json  soft_user_turn.json
src/prompts/intervene/: speedup.json  user_turn.json  w_prompt_guidance.json  wo_prompt_guidance.json
