[project]
name = "interrupt-rllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.0.0",
    "gradio>=5.46.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "latex2sympy2>=1.9.1",
    "litellm>=1.76.1",
    "pandas>=2.3.2",
    "ruff>=0.13.0",
    "seaborn>=0.13.2",
    "timeout-decorator>=0.5.0",
    "word2number>=1.1",
]

[project.optional-dependencies]
vllm = [
    "vllm==0.10.1",
]
